--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3"
